fixed "in block" text v-alignment

--- a/nem-client-api/src/main/webapp/styles/sass/pages/dashboard.scss
+++ b/nem-client-api/src/main/webapp/styles/sass/pages/dashboard.scss
@@ -270,6 +270,7 @@
 .transactionsTile-balance {
 	font-size: 36px;
 	font-weight: $fontWeight-light;
+	vertical-align: middle;
 }
 
 .transactionsTile-currentBlock {
